<resources>
    <string name="app_name">Моя школа</string>
    <string name="title_activity_invitation">InvitationActivity</string>
    <string name="title_activity_create_code">CreateCodeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="generated_code">Сгенерированный код</string>
    <string name="sample_code">421412</string>
    <string name="create_code">Создать код</string>
    <string name="number_of_uses">Количество использований:</string>
    <string name="simple_uses">30</string>
    <string name="name_class">Название класса:</string>
    <string name="simple_class">11В</string>
    <string name="classroom_teacher">Классный руководитель:</string>
    <string name="student">Ученик</string>
    <string name="elder">Староста</string>
    <string name="teacher">Учитель</string>
    <string name="admin">Администратор</string>
    <string name="view_invitations">Посмотреть уже созданные пригашения</string>
    <string name="create_invitations">Создать приглашение</string>
    <string name="start_dialogue">Начать диалог</string>
    <string name="users">Пользователи</string>
    <string name="todo">TODO</string>
    <string name="name">Имя</string>
    <string name="was_recently">Был недавно</string>
    <string name="text_message">Введите сообщение...</string>
    <string name="add_events">Добавление события</string>
    <string name="name_events">Название события</string>
    <string name="description_events">Описание события</string>
    <string name="select_date">Выбрать дату</string>
    <string name="select_time">Выбрать время</string>
    <string name="add">Добавить</string>
    <string name="add_message">Добавление сообщения</string>
    <string name="text_messages">Текст сообщения</string>
    <string name="add_news">Добавление новости</string>
    <string name="name_news">Название новости</string>
    <string name="name_event">Название события</string>
    <string name="description_news">Описание новости</string>
    <string name="event">События</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="reg">Нет аккаунта? Зарегистрироваться</string>
    <string name="message">Сообщения</string>
    <string name="news">Новости</string>
    <string name="settings">Настройки профиля</string>
    <string name="logout">Выйти</string>
    <string name="fname_lname">Имя Фамилия</string>
    <string name="tutor">Куратор</string>
    <string name="FIO">Имя Фамилия Отчество</string>
    <string name="group">Группа</string>
    <string name="class_number">Номер класса</string>
    <string name="school">Школа</string>
    <string name="name_school">Название школы</string>
    <string name="simple_mail">person_email@mail.ru</string>
    <string name="status">Статус</string>
    <string name="simple_status">Статус</string>
    <string name="user_management">Управление пользователями</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="registration">Регистрация</string>
    <string name="lname">Фамилия</string>
    <string name="fname">Имя</string>
    <string name="sname">Отчество</string>
    <string name="pass">Пароль</string>
    <string name="teacher_code">Код от учителя</string>
    <string name="schedule">Расписание</string>
    <string name="prev">Prev</string>
    <string name="data">Data</string>
    <string name="next_btn">Next</string>
    <string name="data_event">Дата события</string>
    <string name="description_event">Описание события</string>
    <string name="_1">1</string>
    <string name="simpe_lesson">Математика 10:15 - 11:45\nПодолян Е.В. 305 кабинет</string>
    <string name="name_teacher">Учитель</string>
    <string name="simple_message">Сообщение</string>
    <string name="simple_data">Время</string>
    <string name="time">Время</string>
    <string name="text">Текст</string>
    <string name="default_notification_channel_id">MESSAGE</string>
</resources>