<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#EBECF4"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/add_news"
            android:textColor="@color/purple"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/newsTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_news"
        android:textColor="@color/black"
        android:inputType="textCapSentences"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/newsDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_news"
        android:textColor="@color/black"
        android:inputType="textCapSentences"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >

        <Button
            android:id="@+id/addNewsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_weight="5"
            />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/add_photo"
            android:layout_gravity="center"
            android:background="#00000000"
            />


    </LinearLayout>



</LinearLayout>