<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingEnd="5dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:layout_margin="5dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_teacher"
                android:gravity="right"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple_message"
                android:textColor="@color/black"
                android:gravity="right"
                />

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple_data"
                android:gravity="right"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/profile"
            android:background="@drawable/circle_background"
            android:clipToOutline="true"
            android:layout_margin="5dp"

            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />


</LinearLayout>