<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/background_schedule_card_drawable"
    >

    <ImageView
        android:id="@+id/eventImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:srcCompat="@drawable/teathure"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:scaleType="fitXY"
        android:background="@drawable/events_image_background"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:clipToOutline="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_event"
                android:textStyle="bold"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/eventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/data_event"
                android:textStyle="bold"
                android:textSize="15sp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description_event"
            android:textSize="15sp"
            />

    </LinearLayout>





</LinearLayout>