<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.Login"
    android:background="#EBECF4"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:textColor="@color/purple"
            android:textSize="30sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:textStyle="bold"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_schedule_drawable"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="10dp"
            >

            <ImageButton
                android:src="@drawable/btn_back_schedule"
                android:id="@+id/prevDay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prev"
                android:height="30dp"
                android:width="30dp"
                android:paddingLeft="20dp"
                android:background="#00000000"
                />


            <TextView
                android:id="@+id/dateTextview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/data"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                />

            <ImageButton
                android:src="@drawable/btn_forward_schedule"
                android:id="@+id/nextDay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/next_btn"
                android:height="30dp"
                android:width="30dp"
                android:paddingEnd="20dp"
                android:background="#00000000"
                />


        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:indeterminateDrawable="@drawable/spinner_ring"
                android:visibility="gone"

                android:layout_gravity="center"

                android:indeterminateOnly="true"
                android:foregroundGravity="center"

                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>