<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/backToDialogs"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/btn_back_news"
            android:background="#00000000"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1000"

            >

           <TextView
               android:id="@+id/name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/name"
               android:textSize="25sp"
               android:gravity="center"
               />

            <TextView
                android:id="@+id/entryTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/was_recently"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_weight="1"
                />

        </LinearLayout>

        <ImageView
            android:padding="5dp"
            android:id="@+id/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars"
            android:background="@drawable/circle_background"
            />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        >


        <EditText
            android:id="@+id/messageField"
            android:hint="@string/text_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:layout_margin="5dp"
            />

        <ImageButton
            android:id="@+id/messageSendButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/send"
            android:background="#00000000"
            android:padding="10dp"
            />

    </LinearLayout>





</LinearLayout>